// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> should render properly 1`] = `
.emotion-6 {
  height: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  border: 0;
  background-color: inherit;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  margin: 0;
  margin-left: -8px;
  margin-right: 8px;
  cursor: pointer;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  border: 0;
  margin: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #ffffff;
  background-color: #4d4948;
  font-weight: 700;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-5 {
  padding-top: 44px;
}

<div
  className="emotion-6"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Open Sidebar Menu"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          data-file-name="hamburger.svg"
          width={20}
        />
      </button>
      <svg
        data-file-name="logo.svg"
        width={110}
      />
      <ProjectSwitcher
        projects={
          Array [
            Object {
              "id": "1",
              "name": "Zorroa ABC",
              "selected": true,
            },
            Object {
              "id": "2",
              "name": "Zorroa EasyAs123",
              "selected": false,
            },
            Object {
              "id": "3",
              "name": "Zorroa JustYouAndMe",
              "selected": false,
            },
          ]
        }
        setSelectedProject={[Function]}
      />
    </div>
    <div
      className="emotion-3"
    >
      <button
        className="emotion-2"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        DT
      </button>
    </div>
  </div>
  <Sidebar
    isSidebarOpen={false}
    setSidebarOpen={[Function]}
  />
  <div
    className="emotion-5"
  >
    Hello World
  </div>
</div>
`;

exports[`<Layout /> should render properly 2`] = `
.emotion-6 {
  height: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  border: 0;
  background-color: inherit;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  margin: 0;
  margin-left: -8px;
  margin-right: 8px;
  cursor: pointer;
}

.emotion-3 {
  position: relative;
}

.emotion-2 {
  border: 0;
  margin: 0;
  padding: 0;
  width: 28px;
  height: 28px;
  border-radius: 28px;
  color: #ffffff;
  background-color: #4d4948;
  font-weight: 700;
}

.emotion-2:hover {
  cursor: pointer;
}

.emotion-5 {
  padding-top: 44px;
}

<div
  className="emotion-6"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-1"
    >
      <button
        aria-label="Open Sidebar Menu"
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          data-file-name="hamburger.svg"
          width={20}
        />
      </button>
      <svg
        data-file-name="logo.svg"
        width={110}
      />
      <ProjectSwitcher
        projects={
          Array [
            Object {
              "id": "1",
              "name": "Zorroa ABC",
              "selected": true,
            },
            Object {
              "id": "2",
              "name": "Zorroa EasyAs123",
              "selected": false,
            },
            Object {
              "id": "3",
              "name": "Zorroa JustYouAndMe",
              "selected": false,
            },
          ]
        }
        setSelectedProject={[Function]}
      />
    </div>
    <div
      className="emotion-3"
    >
      <button
        className="emotion-2"
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      >
        DT
      </button>
    </div>
  </div>
  <Sidebar
    isSidebarOpen={true}
    setSidebarOpen={[Function]}
  />
  <div
    className="emotion-5"
  >
    Hello World
  </div>
</div>
`;
